Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16340

Pool quotas: cannot hit EDQUOT due to the problem with indexes version

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Each PQ has it’s own index file and it's version could be different from “global pool”. When pool settings are changed, MDT sends new limits and limit’s file version to OST. OST discards new settings if the version is less than it’s own version.
      I.e. if you make 100 limit changes for a user from FOO pool, OSTs file version becomes 100+initial_version. Since this moment OSTs from the FOO pool ignore new “global” limits.
      And if the latest limits for a pool FOO were zeroes, these OSTs think the quota is disabled for a user.

      Below is a message can be seen if you hit described problem:

      qsd_upd_schedule()) lustre-OST0000: discarding glb update from glimpse ver:7 local ver:203 

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: