lustre/quota/qmt_handler.c
@@ -262,7 +262,7 @@ quota_write:
 				qmt_restore(lqe, &qti_lqes_rstr(env)[0]);
 				GOTO(out, rc);
 			}
-		} else {
+		} else if (lqe->lqe_is_global) {
 			ver = dt_version_get(env, LQE_GLB_OBJ(lqe));
 		}
 
@@ -283,7 +283,8 @@ out_nolock:
 	}
 
 	if (rc == 0 && dirtied) {
-		qmt_glb_lock_notify(env, lqe, ver);
+		if (lqe->lqe_is_global)
+			qmt_glb_lock_notify(env, lqe, ver);
 		if (lqe->lqe_id.qid_uid == 0) {
 			struct qmt_entry_iter_data iter_data;
 
