lustre/quota/qmt_lock.c
@@ -915,8 +915,9 @@ static void qmt_id_lock_glimpse(const struct lu_env *env,
 	lqe_write_unlock(lqe);
 
 	/* issue glimpse callback to slaves */
-	qmt_glimpse_lock(env, qmt, res, &qti->qti_gl_desc,
-			 qmt_id_lock_cb, lqe);
+	if (lqe->lqe_glbl_data)
+		qmt_glimpse_lock(env, qmt, res, &qti->qti_gl_desc,
+				 qmt_id_lock_cb, lqe);
 
 	lqe_write_lock(lqe);
 	if (lqe->lqe_revoke_time == 0 &&
@@ -999,7 +1000,11 @@ static int qmt_reba_thread(void *_args)
 			list_del_init(&lqe->lqe_link);
 			spin_unlock(&qmt->qmt_reba_lock);
 
-			if (!kthread_should_stop())
+			/* lqe_ref == 1 means we hold the last ref,
+			 * so no need to send glimpse callbacks.
+			 */
+			if (!kthread_should_stop() &&
+			    atomic_read(&lqe->lqe_ref) > 1)
 				qmt_id_lock_glimpse(env, qmt, lqe, NULL);
 
 			lqe_putref(lqe);
